--- a/css/main.css
+++ b/css/main.css
@@ -4551,7 +4551,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   padding: 2rem 1rem;
   margin-bottom: 2rem;
   color: #000000;
-  background-color: #c5dfee94;
+  background-color: #d0d9dfc0;
   border-radius: 0.3rem;
 }
 @media (min-width: 576px) {
@@ -9672,13 +9672,14 @@ h3 {
 }
 
 body {
-  background: url(../Imagenes/fondoladrillo.jpg);
+  background: url(../Imagenes/backgroundP.jpg);
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
 .jumbotron {
   box-shadow: 10px 10px 10px black;
   margin-top: 30px;
+  transition: background 0.8s linear 0.2s;
 }
 
 .carousel-inner img {
@@ -9691,6 +9692,23 @@ body {
 
 .navbar-light .navbar-nav .nav-link {
   color: #ffffff;
+  transition: color 0.8s linear 0.2s;
+}
+
+nav .navbar:hover {
+  background: #9e9191;
+}
+
+.jumbotron:hover {
+  background: #7e9bafc0;
+}
+
+.navbar .navbar-expand-lg .navbar-light .bg-dark:hover {
+  background: #ca6868;
+}
+
+.navbar .navbar-expand-lg .navbar-light .bg-dark {
+  transition: background 0.8s linear 0.2s;
 }
 
 /*# sourceMappingURL=main.css.map */
